2001-07-16  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-time-regexp-list):
	change a hankaku colon (typo) to the zenkaku one.
        Thanks to Mr. KOIE Hidetaka.
	
2001-06-25  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-guess.el: clever mhc-guess-time-regexp.

2001-06-20  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl-highlight-message): Follow the changes
	in Wanderlust 2.6.x and 2.7.x.
	(mhc-wl-insert-summary-contents): Ditto.
	(mhc-wl-summary-mode-setup): Ditto.
	(mhc-wl-summary-next-message): New function.

2001-06-15  Hideyuki SHIRAI  <shirai@quickhack.net>

	* samples/DOT.schedule.sample.jp: Fix 'UMI-NO-HI', 'KEIROU-NO-HI'
	and 'FURIKAE-KYUJITSU' to be accompanied by 'Happy Monday low'.

2001-05-30  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-draft-reedit-file): Fix 'raw JIS' vs
	'mew-decode-broken'.

2001-05-28  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-rescan-month): Move to column '1',
	first. Because current-column() returns a wrong value if point at
	the invisibly text on line-top.

2001-05-22  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-schedule.rb (File#utime2):
	update mtime surely in case FreeBSD.

2001-05-10  Yoshinari Nomura <nom@quickhack.net>

	* configure.rb: xpm path is now configurable.
	search /usr/include/libpisock in checking libpisock.
	(Thanks to Fumitoshi UKAI <ukai@debian.or.jp>)
	
	* ruby-ext/extconf.rb.in:
	remove embeded LD_RUN_PATH.
	(Thanks to Fumitoshi UKAI <ukai@debian.or.jp>)

2001-04-10  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>

	* mhc-make.rb (MhcConfigTable): 'default' fields should be a
	string.

2001-04-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-mime.el (mhc-mime-decode-header): Ad-hoc fix for
	`X-SC-Schedule' header.
	(mhc-mime/draft-reedit): Use `mhc-mime-decode-header'.

2001-03-21  Hideyuki SHIRAI  <shirai@quickhack.net>
