@@ -1,3 +1,8 @@
+2001-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-mew.el (mhc-mew-draft-translate): Catch the error for
+	the illegal headers.
+
 2001-07-16  Yoshinari NOMURA  <nom@quickhack.net>
 
 	* emacs/mhc-guess.el (mhc-guess-time-regexp-list):
